# durable-rust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-error-path-test-coverage/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/01-gsd-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-bmad-cleanup/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02-boundary-replay-engine-tests/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-shared-context-trait/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-13-1257.md
_bmad-output/implementation-artifacts/: 1-1-project-workspace-initialization.md  1-2-core-types-and-error-foundation.md  1-3-durablebackend-trait-and-replay-engine.md  1-4-step-operation-implementation.md  1-5-step-retries-and-typed-errors.md  1-6-closure-native-api-approach-and-lambda-integration.md  1-7-mockdurablecontext-and-local-testing.md  1-8-container-deployment-template.md  2-1-wait-operation.md  2-2-callback-operation.md  2-3-invoke-operation.md  3-1-parallel-operation.md  3-2-map-operation.md  3-3-child-context-operation.md  3-4-replay-safe-logging.md  4-1-proc-macro-api-approach.md  4-2-trait-based-api-approach.md  4-3-builder-pattern-api-approach.md  4-4-cross-approach-behavioral-parity-verification.md  5-1-operation-sequence-verification.md  5-2-python-rust-compliance-suite.md  6-1-rustdoc-coverage.md  6-2-standalone-examples-across-all-api-styles.md  6-3-python-to-rust-migration-guide.md  epic-1-retro-2026-03-14.md  epic-2-retro-2026-03-14.md  epic-3-retro-2026-03-14.md  sprint-status.yaml  tech-spec-epic1-debt-cleanup.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-13.md  prd.md  product-brief-durable-rust-2026-03-13.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
compliance/: README.md
compliance/python/: requirements.txt
compliance/rust/: Cargo.toml
compliance/rust/src/: callback_approval.rs  lib.rs  order_processing.rs  parallel_fanout.rs
compliance/rust/tests/: compare_outputs.rs
crates/durable-lambda-builder/: Cargo.toml  README.md
crates/durable-lambda-builder/src/: context.rs  handler.rs  lib.rs  prelude.rs
crates/durable-lambda-closure/: Cargo.toml  README.md
crates/durable-lambda-closure/src/: context.rs  handler.rs  lib.rs  prelude.rs
crates/durable-lambda-core/: Cargo.toml  README.md
crates/durable-lambda-core/src/: backend.rs  context.rs  error.rs  event.rs  lib.rs  operation_id.rs  ops_trait.rs  replay.rs  response.rs  types.rs
crates/durable-lambda-core/src/operations/: callback.rs  child_context.rs  compensation.rs  invoke.rs  log.rs  map.rs  mod.rs  parallel.rs  step.rs  wait.rs
crates/durable-lambda-core/tests/: multi_operation_workflows.rs
crates/durable-lambda-macro/: Cargo.toml  README.md
crates/durable-lambda-macro/src/: expand.rs  lib.rs
crates/durable-lambda-macro/tests/ui/: fail_not_async.rs  fail_not_async.stderr  fail_wrong_param_count.rs  fail_wrong_param_count.stderr  fail_wrong_param_type.rs  fail_wrong_param_type.stderr  fail_wrong_return_type.rs  fail_wrong_return_type.stderr
crates/durable-lambda-testing/: Cargo.toml  README.md
crates/durable-lambda-testing/src/: assertions.rs  lib.rs  mock_backend.rs  mock_context.rs  prelude.rs
crates/durable-lambda-trait/: Cargo.toml  README.md
crates/durable-lambda-trait/src/: context.rs  handler.rs  lib.rs  prelude.rs
docs/: migration-guide.md
examples/: Dockerfile
examples/builder-style/: Cargo.toml  README.md
examples/builder-style/src/: basic_steps.rs  callbacks.rs  child_contexts.rs  combined_workflow.rs  invoke.rs  map.rs  parallel.rs  replay_safe_logging.rs  step_retries.rs  typed_errors.rs  waits.rs
examples/closure-style/: Cargo.toml  README.md
examples/closure-style/src/: basic_steps.rs  batch_checkpoint.rs  callbacks.rs  child_contexts.rs  combined_workflow.rs  conditional_retry.rs  invoke.rs  main.rs  map.rs  parallel.rs  replay_safe_logging.rs  saga_compensation.rs  step_retries.rs  step_timeout.rs  typed_errors.rs  waits.rs
examples/macro-style/: Cargo.toml  README.md
examples/macro-style/src/: basic_steps.rs  callbacks.rs  child_contexts.rs  combined_workflow.rs  invoke.rs  map.rs  parallel.rs  replay_safe_logging.rs  step_retries.rs  typed_errors.rs  waits.rs
examples/trait-style/: Cargo.toml  README.md
examples/trait-style/src/: basic_steps.rs  callbacks.rs  child_contexts.rs  combined_workflow.rs  invoke.rs  map.rs  parallel.rs  replay_safe_logging.rs  step_retries.rs  typed_errors.rs  waits.rs
infra/: .terraform.lock.hcl  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  stubs.tf  variables.tf
infra/stubs/: fulfillment.py  order_enrichment.py
scripts/: build-images.sh  deploy-all.sh  deploy-ecr.sh  publish.sh  test-all.sh  test-helpers.sh  verify-infra.sh  verify-prerequisites.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: batch_checkpoint.rs  boundary_conditions.rs  compensation.rs  e2e_workflows.rs  error_paths.rs  step_timeout_retry.rs
tests/parity/: Cargo.toml
(+133 files in other folders)
