[package]
name = "durable-lambda-closure"
version = "0.1.0"
edition = "2021"
description = "Closure-native API style for AWS Lambda durable execution workflows"
keywords = ["aws", "lambda", "durable-execution", "serverless", "workflow"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
durable-lambda-core = { path = "../durable-lambda-core" }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-smithy-types = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
