[package]
name = "durable-lambda-closure"
version.workspace = true
edition.workspace = true
description = "Closure-native API style for AWS Lambda durable execution workflows"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/durable-lambda-closure"

[dependencies]
durable-lambda-core = { version = "1.2.0", path = "../durable-lambda-core" }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-smithy-types = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
