[package]
name = "durable-lambda-core"
version.workspace = true
edition.workspace = true
description = "Core replay engine, types, and operation logic for AWS Lambda durable execution in Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/durable-lambda-core"

[dependencies]
aws-sdk-lambda = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
aws-smithy-types = { workspace = true }

[dev-dependencies]
durable-lambda-testing = { path = "../durable-lambda-testing" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test = { workspace = true }
