[package]
name = "durable-lambda-macro"
version = "0.1.0"
edition = "2021"
description = "Proc-macro for zero-boilerplate AWS Lambda durable execution handler registration"
keywords = ["aws", "lambda", "durable-execution", "serverless", "workflow"]
categories = ["api-bindings", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
durable-lambda-core = { path = "../durable-lambda-core" }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
