[package]
name = "durable-lambda-macro"
version.workspace = true
edition.workspace = true
description = "Proc-macro for zero-boilerplate AWS Lambda durable execution handler registration"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/durable-lambda-macro"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
durable-lambda-core = { path = "../durable-lambda-core" }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
