[package]
name = "durable-lambda-testing"
version.workspace = true
edition.workspace = true
description = "MockDurableContext and assertion helpers for testing durable Lambda handlers without AWS credentials"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/durable-lambda-testing"

[dependencies]
durable-lambda-core = { path = "../durable-lambda-core" }
aws-sdk-lambda = { workspace = true }
aws-smithy-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
