[package]
name = "macro-style-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "macro-basic-steps"
path = "src/basic_steps.rs"

[[bin]]
name = "macro-step-retries"
path = "src/step_retries.rs"

[[bin]]
name = "macro-typed-errors"
path = "src/typed_errors.rs"

[[bin]]
name = "macro-waits"
path = "src/waits.rs"

[[bin]]
name = "macro-callbacks"
path = "src/callbacks.rs"

[[bin]]
name = "macro-invoke"
path = "src/invoke.rs"

[[bin]]
name = "macro-parallel"
path = "src/parallel.rs"

[[bin]]
name = "macro-map"
path = "src/map.rs"

[[bin]]
name = "macro-child-contexts"
path = "src/child_contexts.rs"

[[bin]]
name = "macro-replay-safe-logging"
path = "src/replay_safe_logging.rs"

[[bin]]
name = "macro-combined-workflow"
path = "src/combined_workflow.rs"

[dependencies]
durable-lambda-macro = { path = "../../crates/durable-lambda-macro" }
durable-lambda-core = { path = "../../crates/durable-lambda-core" }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
